# ml_framework_benchmark

./: .gitignore  README.md  deploy.sh  main.py  pyproject.toml
result/: 20251222_NVIDIA_A6000.md  20251222_RTX_A6000.md
src/: __init__.py  bench_utils.py  triton_torch_comparison.py
src/cuda_ext/: swiglu_ext.cu
src/envs/: __init__.py
src/envs/cuda/: __init__.py  correctness.py  runner.py  trace.py
src/envs/cuda/cuda_ext/: residual_rmsnorm_ext.cpp  residual_rmsnorm_ext.cu  swiglu_ext.cpp
src/envs/cuda/ops/: __init__.py  residual_rmsnorm_cuda.py  swiglu_cuda.py
src/envs/cuda/scenarios/: __init__.py  matmul.py  residual_rmsnorm.py  swiglu.py
src/envs/macos/: __init__.py  correctness.py  runner.py
src/envs/macos/scenarios/: __init__.py  matmul.py  residual_rmsnorm.py  swiglu.py
src/ops/: residual_rmsnorm_cuda.py  swiglu_cuda.py
src/scenarios/: __init__.py  matmul.py  residual_rmsnorm.py  swiglu.py
