[project]
name = "ml-framework-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "torch>=2.9.1",
    "triton>=3.5.1; platform_system == 'Linux'",
    "ninja>=1.13.0; platform_system == 'Linux'",
    "mlx>=0.29.2; platform_system == 'Darwin'",
    "jax==0.4.34; platform_system == 'Darwin'",
    "jaxlib==0.4.34; platform_system == 'Darwin'",
    "jax-metal==0.1.1; platform_system == 'Darwin'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
